k8s/offers-app-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: offers-app-service
spec:
  type: ClusterIP
  selector:
    app: offers-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offers-app
  template:
    metadata:
      labels:
        app: offers-app
    spec:
      containers:
        - name: offers-app
          image: 484569227865.dkr.ecr.us-east-1.amazonaws.com/offers-app:2.0.0
          ports:
          - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /offers/ping
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 5
