k8s/rf003-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: rf003-service
spec:
  type: ClusterIP
  selector:
    app: rf003-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf003-app-deployment
  labels:
    app: rf003-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf003-app
  template:
    metadata:
      labels:
        app: rf003-app
    spec:
      containers:
        - name: rf003-app
          image: 381492016771.dkr.ecr.us-east-1.amazonaws.com/rf003:2.0.0
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
