k8s/rf004-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: rf004-service
spec:
  type: ClusterIP
  selector:
    app: rf004-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf004-app-deployment
  labels:
    app: rf004-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf004-app
  template:
    metadata:
      labels:
        app: rf004-app
    spec:
      containers:
        - name: rf004-app
          # image: 381492016771.dkr.ecr.us-east-1.amazonaws.com/rf004:2.0.0
          image: rf004:3.0.0
          ports:
          - containerPort: 9000
