k8s/rf005-app-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: rf005-service
spec:
  type: ClusterIP
  selector:
    app: rf005-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf005-app-deployment
  labels:
    app: rf005-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf005-app
  template:
    metadata:
      labels:
        app: rf005-app
    spec:
      containers:
        - name: rf005-app
          # image: 381492016771.dkr.ecr.us-east-1.amazonaws.com/rf005:2.0.0
          image: rf005:3.0.0
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /rf005/ping
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
