k8s/routes-app-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: routes-app-service
spec:
  type: NodePort
  selector:
    app: routes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      nodePort: 30002

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routes-app-deployment
  labels:
    app: routes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routes-app
  template:
    metadata:
      labels:
        app: routes-app
    spec:
      containers:
        - name: routes-app
          image: routes-app:1.0.0
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /routes/ping
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
