k8s/scores-app-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: scores-app-service
spec:
  type: ClusterIP
  selector:
    app: scores-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scores-app-deployment
  labels:
    app: scores-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scores-app
  template:
    metadata:
      labels:
        app: scores-app
    spec:
      containers:
        - name: scores-app
          # image: 381492016771.dkr.ecr.us-east-1.amazonaws.com/scores_app:2.0.0
          image: scores_app:3.0.0
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /scores/ping
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
