k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-app-service
                port:
                  number: 80
          - path: /offers
            pathType: Prefix
            backend:
              service:
                name: offers-app-service
                port:
                  number: 80
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-app-service
                port:
                  number: 80
          - path: /routes
            pathType: Prefix
            backend:
              service:
                name: routes-app-service
                port:
                  number: 80
