k8s/posts-app-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: posts-app-service
spec:
  type: NodePort
  selector:
    app: posts-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      nodePort: 30003

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-app
  template:
    metadata:
      labels:
        app: posts-app
    spec:
      containers:
        - name: posts-app
          image: posts-app:1.0.0
          ports:
          - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            initialDelaySeconds: 5 
            periodSeconds: 30
            failureThreshold: 3
---
# DB service
apiVersion: v1
kind: Service
metadata:
  name: posts-db-service
spec:
  type: ClusterIP
  selector:
    app: posts-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# DB deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-db
  template:
    metadata:
      labels:
        app: posts-db
    spec:
      containers:
        - name: postgres-db
          image: postgres
          ports:
          - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: postgres-storage
          emptyDir:
            sizeLimit: 1Gi

---
# Allow posts-app to DB Network Policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: posts-network
spec:
  podSelector:
    matchLabels:
      app: posts-db
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: posts-app
      ports:
        - protocol: TCP
          port: 5432
