k8s/users-app-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: users-app-service
spec:
  type: NodePort
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
        - name: users-app
          image: users-app:1.0.0
          ports:
          - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /users/ping
              port: 3000
            initialDelaySeconds: 5 
            periodSeconds: 30
            failureThreshold: 3
---
# DB service
apiVersion: v1
kind: Service
metadata:
  name: users-db-service
spec:
  type: ClusterIP
  selector:
    app: users-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# DB deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: postgres-db
          image: postgres
          ports:
          - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: postgres-storage
          emptyDir:
            sizeLimit: 1Gi
---
# Block traffic DB Network Policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: users-network
spec:
  podSelector:
    matchLabels:
      app: users-db
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: users-app
      ports:
        - protocol: TCP
          port: 5432
